--- a/slides/index.html
+++ b/slides/index.html
@@ -15,17 +15,17 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="../../bower_components/reveal.js/css/reveal.css">
-    <link rel="stylesheet" href="../../css/samdark.css">
+    <link rel="stylesheet" href="./bower_components/reveal.js/css/reveal.css">
+    <link rel="stylesheet" href="./css/samdark.css">
     <link rel="stylesheet" href="style.css">
 
     <!-- If the query includes 'print-pdf', use the PDF print sheet -->
     <script>
-        document.write( '<link rel="stylesheet" href="../../bower_components/reveal.js/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+        document.write( '<link rel="stylesheet" href="./bower_components/reveal.js/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
     </script>
 
     <!--[if lt IE 9]>
-    <script src="../../bower_components/reveal.js/lib/js/html5shiv.js"></script>
+    <script src="./bower_components/reveal.js/lib/js/html5shiv.js"></script>
     <![endif]-->
 </head>
 
@@ -852,8 +852,8 @@ if (window.top !== window.self) {
 
 </div>
 
-<script src="../../bower_components/reveal.js/lib/js/head.min.js"></script>
-<script src="../../bower_components/reveal.js/js/reveal.js"></script>
+<script src="./bower_components/reveal.js/lib/js/head.min.js"></script>
+<script src="./bower_components/reveal.js/js/reveal.js"></script>
 
 <script>
 
@@ -871,8 +871,8 @@ if (window.top !== window.self) {
 
         // Optional libraries used to extend on reveal.js
         dependencies: [
-            { src: '../../bower_components/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-            { src: '../../bower_components/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+            { src: './bower_components/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+            { src: './bower_components/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
         ]
     });
 
