--- a/slides/index.html
+++ b/slides/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Безопасность: от базовых принципов до особенностей PHP</title>
+    <title>Как использовать Yii2 в Enterprise? Взять лучшие практики из Symfony!</title>
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <meta name="description" content="Безопасность: от базовых принципов до особенностей PHP">
-    <meta name="author" content="Александр Макаров">
+    <meta name="description" content="Как использовать Yii2 в Enterprise? Взять лучшие практики из Symfony!">
+    <meta name="author" content="Виктор Демин">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -41,34 +41,32 @@ HOTKEYS:
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
         <section class="title-slide" data-background="11.png">
-            <h1>Безопасность</h1>
-            <h2>От базовых принципов до особенностей PHP</h2>
+            <h1>Как использовать Yii2 в Enterprise?</h1>
+            <h2>Взять лучшие практики из Symfony!</h2>
 
-            <p><a href="http://github.com/samdark">Александр Макаров</a></p>
+            <p><a href="https://www.facebook.com/2spacemen?ref=bookmarks">Виктор Демин</a></p>
             <p>
                 <small>
-                    <a href="http://www.yiiframework.com/">Yii core team,</a>
-                    <a href="http://www.stay.com/">Stay.com</a>
+                    CIO <a href="https://wowworks.ru/">Wowworks</a>
                 </small>
             </p>
 
-            <a href="http://slides.rmcreative.ru/2016/devconf-security/">http://slides.rmcreative.ru/2016/devconf-security/</a>
+            <a href="https://github.com/wowworks-team/phpconf">https://github.com/wowworks-team/phpconf</a>
         </section>
 
         <section>
             <h2>Обо мне</h2>
 
             <ul>
-                <li>10+ лет в IT: Java, PHP, JavaScript etc.</li>
-                <li><a href="http://yiicookbook.org/">Писатель</a>, <a href="http://slides.rmcreative.ru/">докладчик</a></li>
-                <li><a href="https://github.com/samdark">OpenSource</a></li>
-                <li><a href="http://www.yiiframework.com/about">Член команды Yii</a>, представитель в PHP-FIG</li>
-                <li>Инженер в <a href="http://www.stay.com/">Stay.com</a></li>
+                <li>Более 10 лет в веб разработке.</li>
+                <li>CIO <a href="https://wowworks.ru/">Wowworks</a></li>
             </ul>
         </section>
 
         <section>
-            <p>Не эксперт по безопасности. <span class="fragment" style="color: #999;">Но кое-что знаю.</span></p>
+            <h2>Главный критерий</h2>
+
+            <p>Unit test</p>
         </section>
 
         <section>
